[package]
name = "pusd-manager-cw"
version = "0.1.0"
authors = ["wc117 <williamchang89117@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = "2.2.0"
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.21"
ethabi = "18.0.0"
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.69" }
getrandom = { version = "0.2.15", features = ["custom"] }

[dev-dependencies]
cw-multi-test = "2.2.0"
